# Testing-framework-for-c-plus-plus-puzzles

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  README_docker_deprecated.md  docker-build.sh  docker-second-connection.sh  docker-start.sh
src/: main.cpp  makefile
src/_old_c_applications/: _old_c_applications.md  hello_world_c.c
src/codewars/: makefile
src/codewars/easy_puzzles/: pXXX_YYY.cpp  pXXX_YYY.h
src/codewars/easy_puzzles/in_out_exp_files/pXXX_YYY/: exp1.txt  exp2.txt  in1.txt  in2.txt
src/my_libs/: README_my_libs.md
src/my_libs/c_modules/: my_c_module.c  my_c_module.h
src/my_libs/helpers/: helpers.cpp  helpers.h
src/my_libs/local_testing/: string_in_out_testing.cpp  string_in_out_testing.h  string_in_out_testing_v2.cpp  string_in_out_testing_v2.h
